project renaming and demo data updates

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -35,26 +35,25 @@
     "\n",
     "***Update the image***\n",
     "```bash\n",
-    "docker pull systemsgenetics/gemprospector_interactive:latest\n",
+    "docker pull systemsgenetics/gsforge_interactive:latest\n",
     "```\n",
     "\n",
     "To run `GSForge` using a jupyter notebook from a docker image:\n",
     "\n",
-    "\n",
     "***Jupyter Lab***\n",
     "\n",
-    "\n",
     "```bash\n",
-    "docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v \"$PWD\":/home/jovyan/work systemsgenetics/gemprospector_interactive:latest\n",
+    "docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
     "```\n",
     "\n",
     "***Jupyter Notebook***\n",
     "\n",
     "```bash\n",
-    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work systemsgenetics/gemprospector_interactive:latest\n",
+    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
     "```\n",
     "\n",
-    "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image."
+    "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image.\n",
+    "(\"jovyan\" is the default user name within the jupyter docker stack container.)"
    ]
   },
   {
@@ -86,10 +85,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
