--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -26,8 +26,8 @@
     "+ [User Guide](user_guide/index)\n",
     "    + [Creating an AnnotatedGEM](user_guide/Creating_an_AnnotatedGEM)\n",
     "    + [Selecting Genes with Boruta](user_guide/Selecting_Genes_with_Boruta)\n",
-    "<!--     + [Storing DESeq2 results as a GeneSet](user_guide/Creating_an_AnnotatedGEM) -->\n",
-    "<!--     + [Storing EdgeR results as a GeneSet](user_guide/Creating_an_AnnotatedGEM) -->\n",
+    "    + [Storing DESeq2 results as a GeneSet](user_guide/Creating_an_AnnotatedGEM)\n",
+    "    + [Storing EdgeR results as a GeneSet](user_guide/Creating_an_AnnotatedGEM)\n",
     "    + [GeneSet Quality Assesment](user_guide/GeneSet_Analysis)\n",
     "    + [Plotting Guide](user_guide/plotting_guide/index)\n",
     "\n",
