--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -1306,20 +1306,7 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
-       "}\n",
-       "\n",
-       "div.hololayout {\n",
+       "<style>div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -1411,6 +1398,19 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -2349,47 +2349,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Declaring paths used***\n",
+    "\n",
+    "For convenience the paths used in this notebook are declared here:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
+    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Loading a demo AnnotatedGEM***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "17-Dec-2019 12:13:56 DEBUG utils - Directory ./ already exists. Skipping.\n",
-      "17-Dec-2019 12:13:56 INFO GEOparse - File already exist: using local version.\n",
-      "17-Dec-2019 12:13:56 INFO GEOparse - Parsing ./GDS2910.soft.gz: \n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - DATABASE: Geo\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - DATASET: GDS2910\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_1\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_2\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_3\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_4\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_5\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_6\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_7\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_8\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_9\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_10\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_11\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_12\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_13\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_14\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_15\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_16\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_17\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_18\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_19\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_20\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - SUBSET: GDS2910_21\n",
-      "17-Dec-2019 12:13:56 DEBUG GEOparse - DATASET: GDS2910\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<GSForge.AnnotatedGEM>\n",
+       "Name: GDS2910\n",
+       "Selected GEM Variable: 'counts'\n",
+       "    Gene   13056\n",
+       "    Sample 191"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\")\n",
-    "agem = gsf.AnnotatedGEM(ds, name=\"GDS2910\")"
+    "agem = gsf.AnnotatedGEM(GDS2910_gem_path)\n",
+    "agem"
    ]
   },
   {
@@ -2410,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2427,7 @@
        "Dimensions:      (Gene: 13056, Sample: 191)\n",
        "Coordinates:\n",
        "  * Sample       (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
-       "  * Gene         (Gene) int64 1 2 3 4 5 6 ... 13052 13053 13054 13055 13056\n",
+       "  * Gene         (Gene) object 'Gene_1' 'Gene_2' ... 'Gene_13055' 'Gene_13056'\n",
        "    quantile     float64 0.75\n",
        "Data variables:\n",
        "    description  (Sample) object 'Value for GSM76723: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae grown in YPD at 30oC' ... 'Value for GSM76805: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii grown in YPD at 24oC'\n",
@@ -2449,7 +2456,7 @@
        "    update_date:               ['Sep 15 2009']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2592,20 +2599,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RPKM\n",
-    "\n",
-    "RPKM is more of a unit of expression than a 'normalization' method."
+    "### Save the AnnotatedGEM as a .netcdf file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'~/GSForge_demo_data/GDS2910.nc'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# rpkm_counts = gp.operations.ReadsPerKilobaseMillion(agem)\n",
-    "# agem.data[\"rpkm_counts\"] = rpkm_counts\n",
-    "# agem.data"
+    "agem.save(\"~/GSForge_demo_data/GDS2910.nc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
