--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1607,13 +1607,10 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
-    "from pathlib import Path\n",
     "import holoviews as hv\n",
     "hv.extension(\"bokeh\")\n",
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "sns.set()\n",
     "\n",
     "import GSForge as gsf"
    ]
@@ -1637,69 +1634,41 @@
    },
    "outputs": [],
    "source": [
-    "ANNOTATED_GEM_PATH = \"~/GEMprospector_demo_data/osativa.nc\"\n",
-    "GENE_SET_DIR = \"~/GEMprospector_demo_data/lineaments/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Path(ANNOTATED_GEM_PATH).expanduser().exists() and Path(GENE_SET_DIR).expanduser().exists()"
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
+    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Loading an AnnotatedGEM***"
+    "***Loading a demo AnnotatedGEM***"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 86.2 ms, sys: 20.2 ms, total: 106 ms\n",
-      "Wall time: 106 ms\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<GSForge.AnnotatedGEM>\n",
+       "Name: GDS2910\n",
+       "Selected GEM Variable: 'counts'\n",
+       "    Gene   13056\n",
+       "    Sample 191"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Loading a GeneSetCollection*** "
+    "agem = gsf.AnnotatedGEM(GDS2910_gem_path)\n",
+    "agem"
    ]
   },
   {
@@ -1714,17 +1683,16 @@
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.GeneSetCollection>\n",
-       "Boruta\n",
-       "    <GEMprospector.AnnotatedGEM>\n",
-       "    Name: Oryza sativa\n",
+       "<GSForge.GeneSetCollection>\n",
+       "Boruta Results\n",
+       "    <GSForge.AnnotatedGEM>\n",
+       "    Name: GDS2910\n",
        "    Selected GEM Variable: 'counts'\n",
-       "        Gene   55986\n",
-       "        Sample 475\n",
+       "        Gene   13056\n",
+       "        Sample 191\n",
        "GeneSet Keys and # of Selected Genes\n",
-       "    Treatment: 1171\n",
-       "    Genotype: 754\n",
-       "    Subspecies: 312"
+       "    Boruta_stress: 768\n",
+       "    Boruta_species: 590"
       ]
      },
      "execution_count": 5,
@@ -1733,8 +1701,8 @@
     }
    ],
    "source": [
-    "gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=GENE_SET_DIR, \n",
-    "                                        name=\"Boruta\")\n",
+    "gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=GDS2910_boruta_result_path, \n",
+    "                                        name=\"Boruta Results\")\n",
     "gsc"
    ]
   },
@@ -2199,9 +2167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (GeneProspector)",
+   "display_name": "Python (base)",
    "language": "python",
-   "name": "pycharm-a2e699d4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2218,10 +2186,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
