--- a/examples/user_guide/Interface_Guide.ipynb
+++ b/examples/user_guide/Interface_Guide.ipynb
@@ -558,7 +558,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -650,19 +663,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1686,6 +1686,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "\n",
     "import holoviews as hv\n",
@@ -1701,7 +1702,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Declaring used paths***"
+    "***Declaring paths used***\n",
+    "\n",
+    "For convenience the paths used in this notebook are declared here:"
    ]
   },
   {
@@ -1710,15 +1713,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "osativa_gem = \"~/GEMprospector_demo_data/osativa.nc\"\n",
-    "GENE_SET_DIR = \"~/GEMprospector_demo_data/lineaments/\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
+    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Loading an AnnotatedGEM***"
+    "***Loading a demo AnnotatedGEM***"
    ]
   },
   {
@@ -1729,11 +1733,11 @@
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.AnnotatedGEM>\n",
-       "Name: Oryza Sativa\n",
+       "<GSForge.AnnotatedGEM>\n",
+       "Name: GDS2910\n",
        "Selected GEM Variable: 'counts'\n",
-       "    Gene   55986\n",
-       "    Sample 475"
+       "    Gene   13056\n",
+       "    Sample 191"
       ]
      },
      "execution_count": 3,
@@ -1742,7 +1746,7 @@
     }
    ],
    "source": [
-    "agem = gsf.AnnotatedGEM(osativa_gem, name=\"Oryza Sativa\")\n",
+    "agem = gsf.AnnotatedGEM(GDS2910_gem_path)\n",
     "agem"
    ]
   },
@@ -1756,8 +1760,8 @@
    },
    "outputs": [],
    "source": [
-    "gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=GENE_SET_DIR, \n",
-    "                                        name=\"Oryza Sativa Demo Collection\")"
+    "gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=GDS2910_boruta_result_path, \n",
+    "                                        name=\"Boruta Results\")"
    ]
   },
   {
@@ -1820,11 +1824,11 @@
     {
      "data": {
       "text/plain": [
-       "Interface(count_mask='complete', count_transform=None, gem=<GEMprospector.AnnotatedGEM>\n",
-       "Name: Oryza Sativa\n",
+       "Interface(annotation_mask='complete', annotation_variables=None, count_mask='complete', count_transform=None, count_variable='counts', gem=<GSForge.AnnotatedGEM>\n",
+       "Name: GDS2910\n",
        "Selected GEM Variable: 'counts'\n",
-       "    Gene   55986\n",
-       "    Sample 475, gene_set_collection=None, gene_set_mode='union', name='Interface02620', selected_annotation_variables=None, selected_count_variable='counts', selected_gene_sets=[None], selected_samples=None, target_mask='complete')"
+       "    Gene   13056\n",
+       "    Sample 191, gene_set_collection=None, gene_set_mode='union', name='Interface02619', sample_subset=None, selected_gene_sets=[None], selected_genes=None)"
       ]
      },
      "execution_count": 5,
@@ -1835,6 +1839,15 @@
    "source": [
     "demo_interface = gsf.Interface(agem)\n",
     "demo_interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_interface."
    ]
   },
   {
@@ -1868,17 +1881,18 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'counts' (Sample: 475, Gene: 55986)>\n",
-       "array([[ 20,   0,   0, ...,   0, 637,   0],\n",
-       "       [  2,   0,   0, ...,   0, 186,   0],\n",
-       "       [ 22,   0,   0, ...,   0, 545,   0],\n",
+       "<xarray.DataArray 'counts' (Sample: 191, Gene: 13056)>\n",
+       "array([[-0.73964 , -0.048194, -0.950774, ...,  0.      ,  0.      ,  0.      ],\n",
+       "       [-0.938866, -0.738372, -0.30974 , ...,  0.      ,  0.      ,  0.      ],\n",
+       "       [-1.66603 , -1.64947 , -0.688444, ...,  0.      ,  0.      ,  0.      ],\n",
        "       ...,\n",
-       "       [  8,   0,   0, ...,   0, 411,   0],\n",
-       "       [  8,   0,   0, ...,   0, 311,   0],\n",
-       "       [ 21,   0,   0, ...,   0, 666,   0]])\n",
+       "       [ 0.      ,  0.      ,  0.      , ...,  0.      ,  0.      ,  0.      ],\n",
+       "       [-1.35669 , -1.19986 , -1.82968 , ...,  0.      ,  0.      ,  0.      ],\n",
+       "       [-1.85536 , -1.86172 , -2.65267 , ...,  0.      ,  0.      ,  0.      ]])\n",
        "Coordinates:\n",
-       "  * Gene     (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
-       "  * Sample   (Sample) object 'SRX1423934' 'SRX1423935' ... 'SRX1424408'"
+       "  * Sample    (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
+       "  * Gene      (Gene) object 'Gene_1' 'Gene_2' ... 'Gene_13055' 'Gene_13056'\n",
+       "    quantile  float64 0.75"
       ]
      },
      "execution_count": 6,
@@ -1899,35 +1913,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'Treatment' (Sample: 475)>\n",
-       "array(['CONTROL', 'CONTROL', 'CONTROL', ..., 'RECOV_DROUGHT', 'RECOV_DROUGHT',\n",
-       "       'RECOV_DROUGHT'], dtype=object)\n",
+       "<xarray.DataArray 'stress' (Sample: 191)>\n",
+       "array(['heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'DNA damage', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'DNA damage', 'DNA damage',\n",
+       "       'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'heat shock', 'heat shock', 'heat shock',\n",
+       "       'heat shock', 'heat shock', 'oxidative stress', 'oxidative stress',\n",
+       "       'oxidative stress', 'oxidative stress', 'oxidative stress',\n",
+       "       'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage', 'DNA damage',\n",
+       "       'DNA damage', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'nitrogen starvation', 'nitrogen starvation',\n",
+       "       'nitrogen starvation', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol', 'growth on glycerol',\n",
+       "       'growth on glycerol', 'growth on glycerol'], dtype=object)\n",
        "Coordinates:\n",
-       "  * Sample   (Sample) object 'SRX1423934' 'SRX1423935' ... 'SRX1424408'"
+       "  * Sample    (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
+       "    quantile  float64 0.75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo_interface = gsf.Interface(agem, annotation_variables=\"Treatment\")\n",
+    "demo_interface = gsf.Interface(agem, annotation_variables=\"stress\")\n",
     "demo_interface.y_annotation_data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
@@ -1951,10 +2018,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
