updated notebook paths

--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -2363,8 +2363,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
-    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\""
    ]
   },
   {
