--- a/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
+++ b/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
@@ -2446,11 +2446,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "osativa_gem = \"../GDS2910.nc\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/boruta_results\""
    ]
   },
   {
@@ -2481,7 +2483,7 @@
     }
    ],
    "source": [
-    "agem = gsf.AnnotatedGEM(osativa_gem, name=\"GDS2910\")\n",
+    "agem = gsf.AnnotatedGEM(GDS2910_gem_path, name=\"GDS2910\")\n",
     "agem"
    ]
   },
