--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -2415,13 +2415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
-    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
-    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/boruta_results\""
    ]
   },
   {
