travis cache updates

--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -2340,6 +2340,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import GSForge as gsf\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
@@ -2651,10 +2652,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
