--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1631,8 +1631,8 @@
    "outputs": [],
    "source": [
     "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
-    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\"\n",
-    "GDS2910_boruta_result_path = demo_dir + \"/boruta_results\""
+    "GDS2910_gem_path = demo_dir + \"/osfstorage/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/osfstorage/boruta_results\""
    ]
   },
   {
