--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -2365,7 +2365,8 @@
    "outputs": [],
    "source": [
     "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
-    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\""
+    "GDS2910_gem_path = demo_dir + \"/osfstorage/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/osfstorage/boruta_results\""
    ]
   },
   {
