--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -2,12 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Welcome to the **GSForge** documentation!\n",
     "\n",
@@ -37,30 +32,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (GeneProspector)",
-   "language": "python",
-   "name": "pycharm-a2e699d4"
+   "display_name": "",
+   "name": ""
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
+   "name": ""
   }
  },
  "nbformat": 4,
