updated travis notebook skips

--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1923,7 +1923,7 @@
     }
    ],
    "source": [
-    "gsc.gene_sets[\"Boruta_stress\"].data = gsc.gene_sets[\"Treatment\"].data.update(\n",
+    "gsc.gene_sets[\"Boruta_stress\"].data = gsc.gene_sets[\"Boruta_stress\"].data.update(\n",
     "    stress_fwe)\n",
     "# gsc.gene_sets[\"Boruta_stress\"].data "
    ]
@@ -2056,10 +2056,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
