updating docker images

--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -33,41 +33,47 @@
     "\n",
     "\n",
     "Consider this example `nextflow.config` file:\n",
+    "\n",
     "```groovy\n",
     "// Singular data input and selection.\n",
-    "params.gem_netcdf = \"~/GSFORGE_DEMO_DATA/GDS2910.nc\"\n",
+    "params.gem_netcdf = \"~/GSForge_demo_data/osfstorage/rice.nc\"\n",
     "params.x_label = \"counts\"\n",
-    "params.y_label = [\"species\", \"stress\"]\n",
+    "params.y_label = [\"treatment\", \"genotype\", \"rep\"]\n",
     "\n",
     "// Ranking model options.\n",
     "params.ranking_model = \"RandomForestClassifier\"\n",
-    "params.ranking_model_opts.max_depth = [3]\n",
+    "params.ranking_model_opts.max_depth = [3, 4, 5, 6, 7]\n",
     "params.ranking_model_opts.n_jobs = [-1]\n",
     "\n",
     "// BorutaPy options.\n",
-    "params.boruta_opts.perc = [100]\n",
+    "params.boruta_opts.perc = [75, 100]\n",
     "params.boruta_opts.max_iter = [1000]\n",
     "\n",
     "// How often to repeat each set of arguments.\n",
-    "params.repeats = 3\n",
+    "params.repeats = 2\n",
     "\n",
     "// Output directory.\n",
-    "params.out_dir = \"~/GEMprospector_demo_data/lineaments/\"\n",
+    "params.out_dir = \"~/GSForge_demo_data/osfstorage/workflow_demo\"\n",
     "```\n",
     "\n",
-    "This can then be run via:\n",
+    "Save this file as `nextflow.config` in some directory which you would like `nextflow` to operate in.\n",
+    "Navigate to that directory, then the workflow can be run via:\n",
     "\n",
     "```bash\n",
-    "nextflow run <path/to/boruta_multiclass/main.nf> -c <path/to/nextflow.config>\n",
+    "nextflow run <path/to/boruta_multiclass/main.nf>\n",
+    "\n",
+    "/home/tyler/github/gsforge/workflows/boruta_multiclass\n",
     "```\n",
     "\n",
     "We recommend running these feature selections using the prepared docker image:\n",
     "\n",
     "```bash\n",
-    "nextflow run <path/to/boruta_multiclass/main.nf> -c <path/to/nextflow.config> -p docker\n",
+    "nextflow run <path/to/boruta_multiclass/main.nf> -p docker\n",
     "```\n",
     "\n",
-    "And the resulting lineament files should be stored in `\"~/GEMprospector_demo_data/lineaments/\"`."
+    "And the resulting lineament files should be stored in the `out_dir`.\n",
+    "\n",
+    "---"
    ]
   },
   {
