--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -62,7 +62,7 @@
     "```bash\n",
     "nextflow run <path/to/boruta_multiclass/main.nf>\n",
     "\n",
-    "/home/tyler/github/gsforge/workflows/boruta_multiclass\n",
+    "nextflow run ~/github/gsforge/workflows/boruta_multiclass/main.nf -p docker\n",
     "```\n",
     "\n",
     "We recommend running these feature selections using the prepared docker image:\n",
