docker updates added

--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### An Example with `boruta_multiclass`\n",
+    "## An Example with `boruta_multiclass`\n",
     "\n",
     "The workflows are named based on the organization of the y, or target variable.\n",
     "These workflows essentially manage calls to `boruta_prospector`.\n",
@@ -31,6 +31,7 @@
     "+ A target variable must be provided.\n",
     "+ Any required to boruta and the ranking model.\n",
     "\n",
+    "### An Example Configuration File\n",
     "\n",
     "Consider this example `nextflow.config` file:\n",
     "\n",
@@ -54,21 +55,22 @@
     "\n",
     "// Output directory.\n",
     "params.out_dir = \"~/GSForge_demo_data/osfstorage/workflow_demo\"\n",
+    "\n",
+    "profiles {\n",
+    "  standard { executor.queueSize = 1 }\n",
+    "  docker { docker.enabled = true\n",
+    "           process.container = 'systemsgenetics/gsforge_workflow:latest' }\n",
+    "}\n",
     "```\n",
+    "\n",
+    "### Running the Workflow\n",
     "\n",
     "Save this file as `nextflow.config` in some directory which you would like `nextflow` to operate in.\n",
     "Navigate to that directory, then the workflow can be run via:\n",
     "\n",
     "```bash\n",
-    "nextflow run <path/to/boruta_multiclass/main.nf>\n",
-    "\n",
-    "nextflow run ~/github/gsforge/workflows/boruta_multiclass/main.nf -p docker\n",
-    "```\n",
-    "\n",
-    "We recommend running these feature selections using the prepared docker image:\n",
-    "\n",
-    "```bash\n",
-    "nextflow run <path/to/boruta_multiclass/main.nf> -p docker\n",
+    "NEXTFLOW_SCRIPT=\"<path to installation>/GSForge/workflows/boruta_multiclass/main.nf\"\n",
+    "nextflow -C nextflow.config run $NEXTFLOW_SCRIPT -profile standard,docker\n",
     "```\n",
     "\n",
     "And the resulting lineament files should be stored in the `out_dir`.\n",
