updated workflow and docker

--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -2353,51 +2353,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Declaring paths used***\n",
-    "\n",
-    "For convenience the paths used in this notebook are declared here:"
+    "***Declare paths used***"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
-    "GDS2910_gem_path = demo_dir + \"/osfstorage/GDS2910.nc\"\n",
-    "GDS2910_boruta_result_path = demo_dir + \"/osfstorage/boruta_results\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Loading a demo AnnotatedGEM***"
+    "# OS-independent path management.\n",
+    "from os import fspath, environ\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data\")).expanduser()\n",
+    "AGEM_PATH = OSF_PATH.joinpath(\"osfstorage\", \"rice.nc\")\n",
+    "BORUTA_COLL_PATH = OSF_PATH.joinpath(\"osfstorage\", \"boruta_gene_sets\")\n",
+    "assert AGEM_PATH.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Load an AnnotatedGEM***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<GSForge.AnnotatedGEM>\n",
-       "Name: GDS2910\n",
+       "Name: Rice\n",
        "Selected GEM Variable: 'counts'\n",
-       "    Gene   13056\n",
-       "    Sample 191"
+       "    Gene   55986\n",
+       "    Sample 368"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agem = gsf.AnnotatedGEM(GDS2910_gem_path)\n",
+    "agem = gsf.AnnotatedGEM(AGEM_PATH)\n",
     "agem"
    ]
   },
@@ -2653,10 +2672,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
